--- a/.github/workflows/backup-notion-hourly.yml
+++ b/.github/workflows/backup-notion-hourly.yml
@@ -2,7 +2,7 @@ name: Hourly Notion CRM Backup
 
 on:
   schedule:
-    - cron: '0 * * * *'          # Every hour (at minute 0)
+    - cron: '*/5 * * * *'          # Every hour (at minute 0)
   workflow_dispatch:                             # Allows manual run from Actions tab
 
 jobs:
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Export CRM database from Notion
-        uses: yannbolliger/notion-exporter@v0.8.1   
+        uses: yannbolliger/notion-exporter@v1.0.0   
         with:
           notion_token: ${{ secrets.NOTION_TOKEN }}
           pages: |
