--- a/.github/workflows/backup-notion-hourly.yml
+++ b/.github/workflows/backup-notion-hourly.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Export CRM database from Notion
-        uses: yannbolliger/notion-exporter@v1.0.0   
+        uses: AsahiMoon/notion-backup@v1.0.0   
         with:
           notion_token: ${{ secrets.NOTION_TOKEN }}
           pages: |
