--- a/.github/workflows/backup-notion-hourly.yml
+++ b/.github/workflows/backup-notion-hourly.yml
@@ -36,6 +36,13 @@ jobs:
 
           notion = Client(auth=os.environ["NOTION_TOKEN"])
 
+          try:
+          me = notion.users.me()
+          print("Authenticated as:", me["name"])
+          except Exception as e:
+          print("AUTH FAILED:", e)
+          raise
+
           database_ids = [
               "2fe86657637a80709d98e8848581f4c7",   # Campus International Maroc’s Hub CRM
               "2fe86657637a80cc8410f9e45f444435"    # Goal Tracker CRM
